force-app/main/default/objects/redwing__Prerequisite_Item__c/redwing__Prerequisite_Item__c.object-meta.xml
<CustomObject>
    <label>Prerequisite Item</label>
    <nameField>
        <label>Prerequisite Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prerequisite Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>