force-app/main/default/objects/redwing__Prerequisite_Item__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipLabel>Prerequisite Items</relationshipLabel>
    <relationshipName>Prerequisite_Items</relationshipName>
    <type>Lookup</type>
</CustomField>