force-app/main/default/objects/redwing__Prerequisite_Item__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Prerequisite Items</relationshipLabel>
    <relationshipName>Prerequisite_Items</relationshipName>
    <type>Lookup</type>
</CustomField>