force-app/main/default/objects/redwing__Prerequisite_Item__c/fields/redwing__Required_Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Required_Status__c</fullName>
    <label>Required Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Acquired</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Available for Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>