force-app/main/default/objects/redwing__Prerequisite_Item__c/fields/redwing__Taught_Classes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Taught_Classes__c</fullName>
    <label>Taught Classes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>