force-app/main/default/objects/redwing__Prerequisite_Item__c/fields/redwing__Training_Track__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Track__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Trac</label>
    <referenceTo>redwing__Training_Track__c</referenceTo>
    <relationshipLabel>Prerequisite Items</relationshipLabel>
    <relationshipName>Prerequisite_Items</relationshipName>
    <type>Lookup</type>
</CustomField>